Fixed stretched media items in chooser widget displayed on Safari

--- a/app/assets/stylesheets/forest/partials/_media_item_chooser.scss
+++ b/app/assets/stylesheets/forest/partials/_media_item_chooser.scss
@@ -31,7 +31,6 @@
 
 .media-item-chooser__image {
   display: block;
-  width: 100%;
   max-width: 100%;
   max-height: 250px;
 
